// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rdf-merge-stream imports remote resources from files 1`] = `
"@prefix sh: <http://www.w3.org/ns/shacl#> .
@prefix schema: <http://schema.org/> .

<> a sh:NodeShape ;
	sh:property <http://localhost:6666/property/identifier> .

<http://localhost:6666/property/identifier> sh:path schema:identifier ;
	sh:minLength 3 ;
	sh:and (
		<http://example.org/required-property>
	) .

<http://example.org/required-property> sh:minCount 1 ;
	sh:maxCount 1 .

"
`;

exports[`rdf-merge-stream imports remote resources from http 1`] = `
"@prefix sh: <http://www.w3.org/ns/shacl#> .
@prefix schema: <http://schema.org/> .

<http://localhost:6666/shape> a sh:NodeShape ;
	sh:property <http://localhost:6666/property/identifier> .

<http://localhost:6666/property/identifier> sh:path schema:identifier ;
	sh:minLength 3 ;
	sh:and (
		<http://example.org/required-property>
	) .

<http://example.org/required-property> sh:minCount 1 ;
	sh:maxCount 1 .

"
`;

exports[`rdf-merge-stream merges file stream by relative path 1`] = `
"@prefix sh: <http://www.w3.org/ns/shacl#> .
@prefix schema: <http://schema.org/> .

<http://example.com/shape> a sh:NodeShape ;
	sh:property <http://example.com/shape#property-identifier> .

<http://example.com/shape#property-identifier> sh:path schema:identifier ;
	sh:minLength 3 ;
	sh:and (
		<http://example.com/required-property>
	) .

<http://example.com/required-property> sh:minCount 1 ;
	sh:maxCount 1 .

"
`;
